--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="rps.js"></script>
+    <script src="rps.js" defer></script>
     <title>Homepage</title>
 </head>
 <body>
-    
+    <button type="button" id="rockbtn">Rock</button>
+    <button type="button" id="paperbtn">Paper</button>
+    <button type="button" id="scissorsbtn">Scissors</button>
+
 </body>
 </html>
