Add scoreboard and winner message

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <button type="button" id="rockbtn">Rock</button>
     <button type="button" id="paperbtn">Paper</button>
     <button type="button" id="scissorsbtn">Scissors</button>
+    <div class="result"></div>
+    <div class="score">
+        Your score: <span id="playerScore">0</span><br>
+        Computer's score: <span id="computerScore">0</span>
+    </div>
+    <div class="winner"></div>
 
 </body>
 </html>
